CSS fix; Fonts fix

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="preload" as="font" type="font/truetype" href="../src/Assets/NovaSquare-Regular.ttf" crossorigin>
+    <link rel="preload" as="font" type="font/embedded-opentype" crossorigin
+    href="../src/assets/nova-square-v13-latin-regular.eot">
+    <link rel="preload" as="font" type="font/svg" crossorigin
+    href="../src/assets/nova-square-v13-latin-regular.svg">
+    <link rel="preload" as="font" type="font/truetype" crossorigin
+      href="../src/assets/nova-square-v13-latin-regular.ttf">
+    <link rel="preload" as="font" type="font/woff" crossorigin
+      href="../src/assets/nova-square-v13-latin-regular.woff">
+    <link rel="preload" as="font" type="font/woff2" crossorigin
+      href="../src/assets/nova-square-v13-latin-regular.woff2">
+    
     <title>React App</title>
   </head>
   <body>
