CSS corrections and additions; 'Create your own Robotfriend' option implemented

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style type="text/css">
+      html, body {
+        height: 100%;
+        margin: 0;
+
+        background-image: linear-gradient(
+          to right, rgb(80, 80, 80), 
+          rgb(160, 160, 160), rgb(80, 80, 80)
+        );
+      }
+
+      #root {
+        min-height: 100%;
+      }
+    </style>
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,15 +41,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="preload" as="font" type="font/embedded-opentype" crossorigin
-    href="../src/assets/nova-square-v13-latin-regular.eot">
+    href="../src/assets/fonts/nova-square-v13-latin-regular.eot">
     <link rel="preload" as="font" type="font/svg" crossorigin
-    href="../src/assets/nova-square-v13-latin-regular.svg">
+    href="../src/assets/fonts/nova-square-v13-latin-regular.svg">
     <link rel="preload" as="font" type="font/truetype" crossorigin
-      href="../src/assets/nova-square-v13-latin-regular.ttf">
+      href="../src/assets/fonts/nova-square-v13-latin-regular.ttf">
     <link rel="preload" as="font" type="font/woff" crossorigin
-      href="../src/assets/nova-square-v13-latin-regular.woff">
+      href="../src/assets/fonts/nova-square-v13-latin-regular.woff">
     <link rel="preload" as="font" type="font/woff2" crossorigin
-      href="../src/assets/nova-square-v13-latin-regular.woff2">
+      href="../src/assets/fonts/nova-square-v13-latin-regular.woff2">
     
     <title>React App</title>
   </head>
